ui/css/treeherder.css
html, body {
    height: 100%;
    overflow: hidden;
}

body {
    line-height: inherit; /* override bootstrap */
}

#global-container {
    display: -webkit-flex;
    display:         flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    height: 100%;
}

.pagination, .carousel, .panel-title a {
    cursor: pointer;
}

.hidden {
    display: none;
    visibility: hidden;
}

.th-navbar {
    background-color: #273038;
    margin-bottom: 0px;
    flex: none;
    -webkit-flex: none;
}

.navbar {
    min-height: 36px;
    margin-bottom: 0px;
}

.navbar-brand {
    line-height: 2px;
    height: 32px;
}
.navbar .dropdown-menu {
    max-height: 600px;
    overflow: auto;
    margin-top: 10px;
    padding-left: 8px;
    padding-bottom: 8px;
}

.th-global-navbar {
    border-bottom: 1px solid black;
}

th-watched-repo {
    display: block;
    float: left;
}

.navbar .repo-menu-form {
    padding: 5px 10px 0;
    overflow-y: scroll;
    top: inherit;
    right: auto;
}

.watched-repo-main-btn {
    border-right: 0;
    padding-right: 5px;
}

.watched-repo-spacer {
    padding-right: 7px;
}

.watched-repo-info-btn {
    border-right: 0
}

.watched-repo-unwatch-btn {
}

.watched-repo-dropdown-item {
    margin: 0px 10px;
}
.watched-repo-dropdown-item > a {
    white-space: normal;
}

.watched-repo-navbar {
    overflow: visible;
}

.th-username {
    margin-right: 5px;
}

.th-help-link {
    padding-top: 8px;
}

.th-context-navbar {
    background-color: #354048;
    overflow: visible;
}

.treeClosed {
    color: rgb(161, 52, 53);
}

.treeOpen {
    color: green;
}

.treeApproval {
    color: #fb9910;
}

.treeUnavailable {
    color: lightgray;
}

#platform-job-text-search-field {
    height:28px;
    width: inherit;
    display: inherit;
}

.th-content {
    flex: auto;
    -webkit-flex: auto;
    position: relative;/* need this to position inner content */
    overflow-y: auto;
}

.nav-panel-help-text {
    color: #2b393f;
    margin-bottom: 10px;
}

/* Options drop-downs*/

.th-top-nav-options-panel {
    background-color: lightgray;
    padding: 10px;
    border: 1px solid black;
    max-height: 400px;
    overflow-y: auto;
}

.th-top-nav-options-panel .th-option-heading {
    padding: 3px 10px;
    background-color: #354048;;
    color: white;
}

.th-inline-option-group {
    display: inline-block;
}

.th-stacked-option-group {
    display: block;
}

.th-option-group {
    margin-right: 5px;
    border: 1px solid #101010;
    -moz-border-radius:5px;
    -webkit-border-radius:5px;
    border-radius:5px;
}

.th-option-heading .th-panel-heading{
    padding: 5px 10px;
    background-color: #354048;
}

#jobFilterValue {
    width: 150px;
}

#jobFilterChoiceValue {
    width: 150px;
}

#jobFilterField {
    width: 200px;
}

.field-filter-form {
    border-top: 2px solid lightgray;
    margin-top: 5px;
    padding: 3px;
    background-color: lightgray;
}

.field-filter {
    margin: 3px;
}

.field-filter a, .th-option-heading a {
    color: white;
    cursor: pointer;
}

.field-filter-placeholder a {
    cursor: pointer;
}

/**
  sheriff panel
*/
.add-new-exclusion input.ng-invalid.ng-dirty{border-color: #B94A48;}

/**
  Failures
*/

.th-failures-box {
    position: fixed;
    top: 46px;
    right:0px;
    padding:2px;
}

.th-failures-box li{
    background-color: #222;
    color: #999;
    border-color: #080808;
}
.th-failures-box li a{
    color: #428bca;
}

.view-nav {
    background-color: #353f47;
}

.view-nav a {
    color: lightgray;

}

/*
    Resultsets
*/

.th-revision-btn {
    margin-left: 10px;
    width: calc(100% - 170px);
}

.th-action-button span.dropdown:hover ul.dropdown-menu{
    display: block;
}

.th-action-button:after {
  content: none;
}

.th-rs-loading {
    width: 50px;
    display: inline-block;
    height: 35px;
    margin-bottom: -14px;
    margin-left: 5px;
}

.revision {
    font-size: 12px;
    padding-top: 2px;
    overflow: auto;
}

.revision > a:first-child {
    float: left;
    width: 7.5em;
    padding-top: 2px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.platform {
    font-size: 12px;
    padding-left: 0;
    padding-right: 5px;
    width: 14.5em;
    min-width: 14.5em;
    overflow: hidden;
    vertical-align: top;
}

.job-row {
    display: table-cell;
    white-space: normal;
    word-break: normal;

}

.result-set {
    padding-bottom: 0px;
    margin-left: 0;
    margin-top: 2px;
    white-space: normal;
    width: 100%;
    border-top: 1px solid lightgrey;
    padding-left: 15px;
    padding-right: 15px;
    position: relative;
}

.result-set-title-left, .result-set-buttons, .result-counts {
    flex: none;
    -webkit-flex: none;
    padding-left: 10px;
    padding-right: 10px;
}

.result-set-title {
    border-top: 1px solid black;
    padding: 2px 0px 0px 0px;
    white-space: nowrap;
    display: flex;
    display: -webkit-flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
    align-items: center;
}

.result-set .revision-list {
    padding-left: 0;
}

/* Cancel all jobs custom icon size */
.glyphicon-minus-sign {
    font-size: 85%;
}

.revision-text {
    overflow: hidden;
    text-overflow: ellipsis;
    width: 95px;
    display: inline-block;
    vertical-align: middle;
}

.revision-button {
    flex: 0 0 60px;
}

.revision-list {
    overflow: hidden;
    white-space: nowrap;
}

.result-set .job-list-pad-left {
    padding-left: 8;
    padding-right: 0;
}

.job-list-pad-left table {
    width: 100%;
}

.job-list-pad-left table tr {
    border-bottom: 1px dotted lightgrey;
}

.job-list-pad-left table tr:nth-child(even) {
    background: #f8f8f8;
}

.result-set .job-list-nopad {
    padding-left: 0;
    padding-right: 0;
    display: block;
}

.selected-job {
    border: 5px solid;
}

.job-group {
    margin: 0 -3px 0 3px;
}

.job-btn {
  padding: 0 2px 0 2px;
  vertical-align: 0;
  line-height: 1.32;
}
/* ... */

